--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://bootswatch.com/lumen/bootstrap.min.css">
   <title>Nd Projects</title>
 </head>
 <body>
-  <p>Content Goes Here</p>
-  <img src=<%= require('./images/node.png') %> alt="">
+  <p id=kamen>Content Goes Here</p>
+
 </body>
 </html>
+
+<!-- src=<%= require('./images/nav.png') %> importing image-->
